deploy/kubernetes/docker-desktop/signalr-deployment.yml
#kubectl apply -f https://raw.githubusercontent.com/kubernetes/ingress-nginx/controller-v1.1.3/deploy/static/provider/aws/deploy.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: hub-notification-server-deployment
  #namespace: qa
  labels:
    version: 1.0.0
    product: hub-notification-server
    environment: qa

spec:
  replicas: 1
  selector:
    matchLabels:
      app: hub-notification-server
      env: qa
  
  template:
    metadata:
      labels:
        app: hub-notification-server
        env: qa
    spec:
      containers:
      - name: signalrservice-container
        image: logcornerhub/logcorner-edusync-notification-server 
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
        - containerPort: 443
          protocol: TCP
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
