deploy/kubernetes/docker-desktop/signalr-service.yml
apiVersion: v1
kind: Service
metadata:
  name: hub-notification-server-service
  #namespace: qa
  labels:
    version: 1.0.0
    product: speech-command-http-api
    environment: qa

spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  - port: 443
    targetPort: 443
    protocol: TCP
    name: https
  selector:
    app: hub-notification-server
    env: qa
